--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -4,17 +4,66 @@
       게시판
     </ion-title>
   </ion-toolbar>
-</ion-header>
+</ion-header> 
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+<ion-content>
+  <ion-grid>
+    <ion-row>
+      <ion-col size-xs = " 0 "  size-sm = " 0 "  size-md = " 1 "  size-lg = " 2 "  size-xl = " 3 ">
+      </ion-col>
+      <ion-col size-xs = " 12 "  size-sm = " 12 "  size-md = " 10 "  size-lg = " 8 "  size-xl = " 6 ">
+        <ion-row>
+          <ion-col size="10">
+          </ion-col>  
+           <ion-col size="2">
+            <ion-button>글쓰기</ion-button>   
+          </ion-col>           
+        </ion-row>
+        <ion-row *ngFor="let item of boardList" :key="index">
+          <ion-col size="2">
+            <div>
+              {{ item.num }}
+            </div>
+          </ion-col>
+          <ion-col size="2">
+            <div>
+                {{ item.tag }}
+            </div>
+          </ion-col>
+          <ion-col size="4">
+            <div>
+            {{ item.title }}
+            </div>
+          </ion-col>
+          <ion-col size="2">
+            <div>
+              {{ item.date }}
+            </div>
+          </ion-col>
+          <ion-col size="2">
+            <div>
+              {{ item.hit }}
+            </div>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col size-xs = " 2 "  size-sm = " 3 "  size-md = " 3 "  size-lg = " 3 "  size-xl = " 3 ">
+          </ion-col>  
+           <ion-col size-xs = " 9 "  size-sm = " 8 "  size-md = " 8 "  size-lg = " 8 "  size-xl = " 8 ">
+            <ion-button>&#60;</ion-button>
+            <ion-button>1</ion-button>   
+            <ion-button>2</ion-button>   
+            <ion-button>3</ion-button>   
+            <ion-button>4</ion-button>   
+            <ion-button>5</ion-button>   
+            <ion-button>></ion-button>
+          </ion-col> 
+           <ion-col size-xs = " 0 "  size-sm = " 0 "  size-md = " 0 "  size-lg = " 0 "  size-xl = " 0 ">
+          </ion-col>           
+        </ion-row>
+      </ion-col>
+      <ion-col size-xs = " 0 "  size-sm = " 0 "  size-md = " 1 "  size-lg = " 2 "  size-xl = " 3 ">
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
