--- a/src/app/home/writing/writing.page.html
+++ b/src/app/home/writing/writing.page.html
@@ -5,5 +5,42 @@
 </ion-header>
 
 <ion-content>
-
+  <ion-grid>
+    <ion-row>
+      <ion-col size-xs = " 0 "  size-sm = " 0 "  size-md = " 1 "  size-lg = " 3 "  size-xl = " 4 ">
+      </ion-col>
+      <ion-col size-xs = " 12 "  size-sm = " 12 "  size-md = " 10 "  size-lg = " 6 "  size-xl = " 4 ">
+        <ion-row>
+          <ion-col>
+          </ion-col>  
+           <ion-col>
+          </ion-col>           
+        </ion-row>
+        <ion-row>
+          <div class="line-input">
+            <ion-item>
+              <ion-label position="floating">제목</ion-label>
+              <ion-input placeholder="제목을 입력하세요."></ion-input>
+            </ion-item>
+            <ion-item>
+              <ion-label position="floating">내용</ion-label>
+              <ion-textarea rows="12" cols="150" placeholder="내용을 입력하세요."></ion-textarea>
+            </ion-item>
+          </div>
+        </ion-row>
+        <ion-row>
+          <ion-col size="5">
+          </ion-col>  
+          <ion-col size="6">
+            <ion-button (click)="cancel()">취소</ion-button>
+            <ion-button (click)="submit()">등록</ion-button>
+          </ion-col> 
+           <ion-col size="1">
+          </ion-col>           
+        </ion-row>
+      </ion-col>
+      <ion-col size-xs = " 0 "  size-sm = " 0 "  size-md = " 1 "  size-lg = " 3 "  size-xl = " 4 ">
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
